--- a/src/layout/header/styles.module.scss
+++ b/src/layout/header/styles.module.scss
@@ -1,9 +1,10 @@
 .nav_wrapper {
-  background-color: #355c7D !important;
+  background-color: white !important;
   justify-content: center !important;
-  font-family: Tahoma;
+  font-family: Tahoma !important;
   padding: 90px 10px;
   transition: 0.4s;
+  box-shadow: 0 1px 5px #968c83;
 }
 
 .brandWrapper {
@@ -16,7 +17,7 @@
   .brand {
     font-size: x-large !important;
     font-weight: bold;
-    color: white !important;
+    color: #373a40 !important;
     text-transform: uppercase;
 
   }
@@ -34,6 +35,7 @@
 
 .nav_container {
   justify-content: center !important;
+  align-items: center !important;
   display: flex;
   @media (max-width: 991px) {
     justify-content: flex-start !important;
@@ -41,13 +43,20 @@
 
   .route {
     font-size: medium !important;
-    color: white !important;
+    color: black !important;
     text-transform: uppercase;
     font-weight: bold;
     padding: 2rem;
   }
 
   .route:hover {
-    color: lightblue !important;
+    color: #686d76 !important;
+  }
+
+  .switchIcon {
+    //margin-right: auto;
+    //margin-left:auto
+    padding-top: 0.5rem;
+    margin-left: 50%;
   }
 }
