feature<left-side-panel> add contact form hook

--- a/src/pages/contents/contact/styles.module.scss
+++ b/src/pages/contents/contact/styles.module.scss
@@ -1,3 +1,9 @@
 .content_wrapper {
-  padding: 100px;
+  padding: 80px;
+}
+.contact_wrapper {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+
 }
