--- a/src/pages/contents/portfolio/styles.css
+++ b/src/pages/contents/portfolio/styles.css
@@ -6,7 +6,7 @@
 .portfolio-enter-active {
     opacity: 1;
     transition: opacity 1000ms ease-in;
-    transform: translateX(0);
+    /*transform: translateX(0);*/
 }
 
 .portfolio-exit {
