--- a/src/pages/contents/stories/styles.module.scss
+++ b/src/pages/contents/stories/styles.module.scss
@@ -40,11 +40,13 @@
   }
 
 }
+
 .typewrapper {
   display: flex;
   justify-content: center;
 
 }
+
 .page_title {
   font-size: 4em;
   font-weight: bold;
@@ -55,11 +57,12 @@
   font-size: 2em;
   margin: 0;
 
-  &:after{
+  &:after {
     content: "|";
     animation: blink 300ms linear infinite alternate;
   }
 }
+
 .typewriter {
   overflow: hidden;
   border-right: .15em solid orange;
@@ -88,17 +91,30 @@
     border-color: orange
   }
 }
-@-webkit-keyframes blink{
-  0%{opacity: 0;}
-  100%{opacity: 1;}
+
+@-webkit-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-@-moz-keyframes blink{
-  0%{opacity: 0;}
-  100%{opacity: 1;}
+@-moz-keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
-@keyframes blink{
-  0%{opacity: 0;}
-  100%{opacity: 1;}
+@keyframes blink {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
