--- a/src/pages/contents/stories/styles.module.scss
+++ b/src/pages/contents/stories/styles.module.scss
@@ -1,4 +1,10 @@
 
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
 .my_img {
   content: "";
   background-size: cover;
@@ -11,11 +17,13 @@
   right: 0;
   bottom: 0;
   /* Preserve aspet ratio */
-  min-width: 100%;
-  min-height: 100%;
-
+  // smallest width is 100%
+  min-width: 90%;
+  margin-top: 7%;
+  margin-left: 7%;
+  // scale the iamge to screen height
+  max-height: 80vh;
 }
-
 
 .title_content {
   content: "";
